# BoardRoute

./: .gitignore  README.md  code_snapshot.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
src/: App.css  App.tsx  index.css
src/components/: BoardCanvas.tsx  MetricsPanel.tsx
src/components/board/: boardDrawing.ts  boardGeometry.ts  boardHitTesting.ts  boardInteractionTypes.ts
src/demo/: demoBoard.ts
src/routing/: routeTypes.ts  routerModule.ts
src/types/: router-module.d.ts
src/wasm/: CMakeLists.txt
src/wasm/src/: board_generator.cpp  board_generator.hpp  board_types.hpp  route_metrics.cpp  route_metrics.hpp  router.cpp  router.cpp.bak  router.hpp  routing_graph.cpp  routing_graph.hpp
src/wasm/wasm/: router_module.cpp  router_module_api.hpp
